--- a/Templates/about.html
+++ b/Templates/about.html
@@ -1,6 +1,8 @@
-{% extends "layout.html" %}
-{%load static%}
+{% extends "Base.html" %}
 
-{% block body%}
+
+{% block title%}
 <a href="#" style="--bs-link-opacity: .5">This is an example link</a>
+{%endblock%}
+{%block content%}
 {%endblock%}
