--- a/Templates/Base.html
+++ b/Templates/Base.html
@@ -1,86 +1,116 @@
-
-<<!-- using bootsrap and templating -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %} My Website {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>{% block title %}Default Title{% endblock %}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            color: #333;
-        }
-        header {
-            background-color: #f4f4f4;
-            padding: 10px;
-            text-align: center;
-        }
-        main {
-            margin-top: 20px;
-        }
-        footer {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- header-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
-      </nav>
-    <!-- Start of the main content -->
-    <h1>Welcome to My Website</h1>
-    <p>This is the main content area.</p>
-    
-    <!-- Navigation bar -->
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
+      </div>
     </nav>
 
-    <!-- End of the main content -->
-</body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <!-- Content -->
+    <div class="container mt-4">
+          {% block content %}
+          <!-- Content will go here -->
+          {% endblock %}
+    </div>
+  
+
+      <!-- Footer -->
+  <footer class="footer bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <!-- Contact Info -->
+        <div class="col-lg-4 col-md-6 mb-4">
+          <h5><i class="bi bi-house"></i> Jogoo House "B" Taifa Road</h5>
+          <p>P.O. Box 300400-00100 Nairobi</p>
+          <p><i class="bi bi-envelope"></i> Email us: info@education.go.ke</p>
+          <p><i class="bi bi-telephone"></i> Call us: +254 (0) 3318581</p>
+        </div>
+
+        <!-- State Corporations -->
+        <div class="col-lg-2 col-md-6 mb-4">
+          <h5>STATE CORPORATION</h5>
+          <ul class="list-unstyled">
+            <li>Kenya National Examinations Council</li>
+            <li>Kenya Education Management Institute</li>
+            <li>Kenya Literature Bureau</li>
+            <li>Kenya Institute of Special Education</li>
+            <li>Kenya Institute of Curriculum Development</li>
+          </ul>
+        </div>
+
+        <!-- More State Corporations -->
+        <div class="col-lg-2 col-md-6 mb-4">
+          <h5>STATE CORPORATION</h5>
+          <ul class="list-unstyled">
+            <li>Education Kenya National Commission for UNESCO</li>
+            <li>School Equipment Production Unit</li>
+            <li>Jomo Kenyatta Foundation</li>
+            <li>Teachers Service Commission</li>
+            <li>National Commission for Science Technology and Innovation</li>
+          </ul>
+        </div>
+
+        <!-- Public Universities -->
+        <div class="col-lg-2 col-md-6 mb-4">
+          <h5>PUBLIC UNIVERSITIES</h5>
+          <ul class="list-unstyled">
+            <li>Kenyatta University</li>
+            <li>University of Nairobi</li>
+            <li>Jomo Kenyatta University of Agriculture and Technology</li>
+            <li>Moi University</li>
+            <li>University of Eldoret</li>
+          </ul>
+        </div>
+
+        <!-- Newsletter Section -->
+        <div class="col-lg-2 col-md-6 mb-4">
+          <h5>NEWSLETTER</h5>
+          <p>The subscription service is currently unavailable. Please check again later.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+    <h1>Introduction to flusk</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
